# Stream-Data-Compactor

./: Burrows-WheelerConfig.h.in  CMakeLists.txt  README.md
src/: Burrows-WheelerConfig.h  BurrowsWheeler.cpp  BurrowsWheeler.h  BurrowsWheelerMain.cpp  CMakeLists.txt  CircularSuffixArray.cpp  CircularSuffixArray.h  Huffman.cpp  Huffman.h  HuffmanMain.cpp  MoveToFront.cpp  MoveToFront.h  MoveToFrontMain.cpp  Quick3stringEx.cpp  Quick3stringEx.h  istreambin.cpp  istreambin.h  main.cpp  ostreambin.cpp  ostreambin.h
